Fix undefining of colours

--- a/bmc-color.sty
+++ b/bmc-color.sty
@@ -70,33 +70,33 @@
 }
 
 \newcommand{\undefinepalette}{
-    \let\color@Cream\undefined
-    \let\color@White\undefined
-    \let\color@Black\undefined
-    \let\color@Grey\undefined
-    \let\color@LightGrey\undefined
-    \let\color@DarkGrey\undefined
-    \let\color@Red\undefined
-    \let\color@LightRed\undefined
-    \let\color@DarkRed\undefined
-    \let\color@Yellow\undefined
-    \let\color@LightYellow\undefined
-    \let\color@DarkYellow\undefined
-    \let\color@Blue\undefined
-    \let\color@LightBlue\undefined
-    \let\color@DarkBlue\undefined
-    \let\color@Green\undefined
-    \let\color@LightGreen\undefined
-    \let\color@DarkGreen\undefined
-    \let\color@Orange\undefined
-    \let\color@LightOrange\undefined
-    \let\color@DarkOrange\undefined
-    \let\color@Purple\undefined
-    \let\color@LightPurple\undefined
-    \let\color@DarkPurple\undefined
-    \let\color@Cyan\undefined
-    \let\color@LightCyan\undefined
-    \let\color@DarkCyan\undefined
+    \expandafter\let\csname\string\color@Cream\endcsname\undefined
+    \expandafter\let\csname\string\color@White\endcsname\undefined
+    \expandafter\let\csname\string\color@Black\endcsname\undefined
+    \expandafter\let\csname\string\color@Grey\endcsname\undefined
+    \expandafter\let\csname\string\color@LightGrey\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkGrey\endcsname\undefined
+    \expandafter\let\csname\string\color@Red\endcsname\undefined
+    \expandafter\let\csname\string\color@LightRed\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkRed\endcsname\undefined
+    \expandafter\let\csname\string\color@Yellow\endcsname\undefined
+    \expandafter\let\csname\string\color@LightYellow\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkYellow\endcsname\undefined
+    \expandafter\let\csname\string\color@Blue\endcsname\undefined
+    \expandafter\let\csname\string\color@LightBlue\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkBlue\endcsname\undefined
+    \expandafter\let\csname\string\color@Green\endcsname\undefined
+    \expandafter\let\csname\string\color@LightGreen\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkGreen\endcsname\undefined
+    \expandafter\let\csname\string\color@Orange\endcsname\undefined
+    \expandafter\let\csname\string\color@LightOrange\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkOrange\endcsname\undefined
+    \expandafter\let\csname\string\color@Purple\endcsname\undefined
+    \expandafter\let\csname\string\color@LightPurple\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkPurple\endcsname\undefined
+    \expandafter\let\csname\string\color@Cyan\endcsname\undefined
+    \expandafter\let\csname\string\color@LightCyan\endcsname\undefined
+    \expandafter\let\csname\string\color@DarkCyan\endcsname\undefined
 }
 
 \newcommand{\ensurepalettecomplete}{
